# clowdlet

./: README.md  pyproject.toml
.github/workflows/: lint.yml
clowdlet/: cli.py  utils.py
clowdlet/models/: clowdapp.py  clowdapptemplate.py  database.py  deployment.py
examples/: clowdapp.yaml  custom.env
